--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.1",
-    "@google/genai": "^1.31.0",
-    "lucide-react": "^0.556.0",
-    "react-dom": "^19.2.1",
-    "react-router-dom": "^6.28.0",
-    "firebase": "^12.6.0"
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-router-dom": "6.22.3",
+    "@google/genai": "0.1.0",
+    "lucide-react": "0.344.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
