--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "18.3.1",
+    "react": "^19.2.1",
+    "@google/genai": "^1.31.0",
+    "lucide-react": "^0.556.0",
     "react-dom": "^19.2.1",
-    "react-router-dom": "6.22.3",
-    "lucide-react": "0.344.0",
-    "@google/genai": "0.1.1",
+    "react-router-dom": "^6.28.0",
     "firebase": "^12.6.0"
   },
   "devDependencies": {
